...
    val selectedIcon: ImageVector,
    val unselectedIcon: ImageVector,
)

val bottomNavigationItems = listOf(
    BottomNavigationItem(
        title = "Home",
        route = Home,
        selectedIcon = Icons.Filled.Home,
        unselectedIcon = Icons.Outlined.Home,
    ),
    BottomNavigationItem(
        title = "Favorites",
        route = ArtworkFavorites,
        selectedIcon = Icons.Filled.Favorite,
        unselectedIcon = Icons.Outlined.Favorite,
    ),
)

...
