...

@OptIn(ExperimentalComposeUiApi::class)
@Composable
fun ArtworkTile(artwork: Artwork, onClick: () -> Unit) {
    Card(
        modifier = Modifier
            .semantics { testTagsAsResourceId = true }.testTag("artworkTile")
            .clickable(onClick = onClick),
        shape = RoundedCornerShape(12.dp)
    ) {
        Row(
            modifier = Modifier
                .height(130.dp)
...
