...
 */
@Composable
fun SwipeableListView(
    items: List<Artwork>,
    onClickItem: (Int) -> Unit,
    onDeleteItem: ((Artwork) -> Unit)? = null,
    semanticTag: String = "swipeableListView",
) {
    CustomListView(
        items = items,
        onClickItem = onClickItem,
        onDeleteItem = onDeleteItem,
        semanticTag = semanticTag
...
